<resources><string name="app_name">EmployeeManager</string><string name="create_employee">Create employee</string><string name="edit_employee">Edit employee</string><string name="employee_name_hint">Name</string><string name="employee_birthday_hint">Birthday</string><string name="employee_hiredate_hint">Hire date</string><string name="employee_occupation_hint">Occupation</string><string name="employee_salary_hint">Salary</string><string name="employee_phone_hint">Phone</string><string name="employee_email_hint">Email</string></resources>