<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:background="#ECF7F9" xmlns:android="http://schemas.android.com/apk/res/android"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="50sp" android:id="@+id/actionBar" android:background="#F9035F"><TextView android:text="@string/create_employee" android:layout_width="match_parent" android:layout_height="match_parent" android:textSize="22sp" android:textColor="#fff" android:gravity="center_vertical" android:paddingLeft="12dp" android:paddingRight="12dp" android:id="@+id/createOrEditEmployee" android:layout_weight="1" /><ImageButton android:src="@drawable/save_btn" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/btnSaveEmployee" android:background="#F9035F" android:paddingLeft="14dp" android:paddingRight="14dp" android:layout_marginRight="6dp" android:layout_marginBottom="3dp" android:layout_marginTop="3dp" /></LinearLayout><ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:padding="14dp"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@drawable/_add_employee_form" android:padding="22dp"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content"><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeeName" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_name_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:inputType="textCapWords" android:layout_weight="1" android:layout_marginRight="6dp" /><ImageButton android:layout_width="36dp" android:layout_height="36dp" android:layout_gravity="center_vertical" android:id="@+id/btnSelectColor" android:src="@drawable/select_color_btn" android:background="#C4EBE5" /></LinearLayout><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeeBirthday" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_birthday_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:layout_marginTop="12dp" android:layout_marginBottom="12dp" android:inputType="date" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeeHireDate" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_hiredate_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:inputType="date" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeeOccupation" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_occupation_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:inputType="textCapSentences" android:layout_marginBottom="12dp" android:layout_marginTop="12dp" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeeSalary" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_salary_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:inputType="numberDecimal" /><TextView android:layout_width="match_parent" android:layout_height="1dp" android:background="#C4D7DB" android:layout_marginTop="18dp" android:layout_marginBottom="18dp" android:id="@+id/textView1" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeePhone" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_phone_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:inputType="phone" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/inputEmployeeEmail" android:background="@drawable/_input_add_employee" android:textSize="17sp" android:hint="@string/employee_email_hint" android:textColor="#2A7FE1" android:paddingBottom="8dp" android:paddingTop="8dp" android:paddingLeft="12dp" android:paddingRight="12dp" android:textColorHint="#BEA992" android:inputType="textEmailAddress" android:layout_marginTop="12dp" /></LinearLayout></ScrollView></LinearLayout>